# Lanxin_Camera

./: CMakeLists.txt  README.md  package.xml
VMR_QC_SDK_demo/demo/: README.md
VMR_QC_SDK_demo/demo/examples/: CMakeLists.txt  demo.cpp  demo_2.cpp  snapshot_demo.cpp
VMR_QC_SDK_demo/demo/include/: VmrQrCameraApi.h  VmrQrCameraDefine.h
config/: config_cameras.yaml
docs/: DEVELOPMENT.md
include/: lanxin_sdk_client.h  qr_camera_config.h  qr_code_identify_node.h  qr_code_parser.h  qr_result_buffer.h
include/qr_code_identify_lanxin/: lanxin_sdk_client.h  qr_camera_config.h  qr_code_identify_node.h  qr_code_parser.h  qr_result_buffer.h
launch/: one_qr_camera.launch
sdk/lib/: aarch64
src/: lanxin_sdk_client.cpp  main.cpp  qr_camera_config.cpp  qr_code_identify_node.cpp  qr_code_parser.cpp  qr_result_buffer.cpp
