<?xml version="1.0"?>
<package format="2">
  <name>qr_code_identify_lanxin</name>
  <version>2.0.0</version>
  <description>Clean ROS wrapper for the Lanxin VMR QR camera SDK.</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>common_msgs</depend>

  <export/>
</package>
